# RemoteWebCam

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
android-app/: README.md  gradlew  gradlew.bat  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/remotewebcam/app/: MainActivity.kt  NetworkUtils.kt  (+2 more)
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_record.xml  ic_switch_camera.xml  spinner_background.xml  spinner_background_floating.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
android-app/app/src/main/res/mipmap-mdpi/: ic_launcher.xml  ic_launcher_round.xml
android-app/app/src/main/res/mipmap-xhdpi/: ic_launcher.xml  ic_launcher_round.xml
android-app/app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml  ic_launcher_round.xml
android-app/app/src/main/res/mipmap-xxxhdpi/: ic_launcher.xml  ic_launcher_round.xml
android-app/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android-app/app/src/main/res/values-night/: themes.xml
desktop-app/: README.md  RemoteWebcam.spec  build.bat  installer.iss  main.py  pyproject.toml  requirements.txt
desktop-app/src/: __init__.py  adb_bridge.py  app.py  receiver.py  virtual_cam.py
docs/: _config.yml  index.html
